--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,18 @@ uuid = "8949ac52-83c2-4a90-b175-e52cde45fddb"
 authors = ["Patrick Altmeyer"]
 version = "1.0.0-DEV"
 
+[deps]
+CounterfactualExplanations = "2f13d31b-18db-44c1-bc43-ebaf2cff0be0"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+
+[weakdeps]
+RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
+
+[extensions]
+RTorchModelExt = "RCall"
+
 [compat]
-julia = "1.6"
+julia = "1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
