--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ PyTorchModelExt = "PythonCall"
 RTorchModelExt = "RCall"
 
 [compat]
+CounterfactualExplanations = "0.1"
 julia = "1.9"
 
 [extras]
