--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,9 @@ RTorchModelExt = "RCall"
 julia = "1.9"
 
 [extras]
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["PythonCall", "Printf", "Random", "Test"]
