--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,21 +1,9 @@
-name = "TaijaInteroperability"
-uuid = "8949ac52-83c2-4a90-b175-e52cde45fddb"
-authors = ["Patrick Altmeyer"]
-version = "1.0.0-DEV"
-
 [deps]
 CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 CounterfactualExplanations = "2f13d31b-18db-44c1-bc43-ebaf2cff0be0"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 PackageExtensionCompat = "65ce6f38-6b18-4e1d-a461-8949797d7930"
-
-[weakdeps]
 PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
-RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
-
-[extensions]
-PyTorchModelExt = "PythonCall"
-RTorchModelExt = "RCall"
-
-[compat]
-julia = "1.9"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
