--- a/Project.toml
+++ b/Project.toml
@@ -18,4 +18,8 @@ PyTorchModelExt = "PythonCall"
 RTorchModelExt = "RCall"
 
 [compat]
+CondaPkg = "0.2"
+CounterfactualExplanations = "0.1"
+Flux = "0.14"
 julia = "1.9"
+PackageExtensionCompat = "1"
