--- a/Project.toml
+++ b/Project.toml
@@ -21,5 +21,5 @@ RTorchModelExt = "RCall"
 CondaPkg = "0.2"
 CounterfactualExplanations = "0.1"
 Flux = "0.14"
-julia = "1.9"
+julia = "1.7, 1.8, 1.9"
 PackageExtensionCompat = "1"
