--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,6 @@ RTorchModelExt = "RCall"
 [compat]
 CondaPkg = "0.2"
 CounterfactualExplanations = "0.1"
-Flux = "0.14"
+Flux = "0.12, 0.13, 0.14"
 julia = "1.7, 1.8, 1.9"
 PackageExtensionCompat = "1"
