--- a/test/Project.toml
+++ b/test/Project.toml
@@ -3,7 +3,8 @@ CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 CounterfactualExplanations = "2f13d31b-18db-44c1-bc43-ebaf2cff0be0"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 PackageExtensionCompat = "65ce6f38-6b18-4e1d-a461-8949797d7930"
-PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+TaijaData = "9d524318-b4e6-4a65-86d2-b2b72d07866c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
