--- a/test/Project.toml
+++ b/test/Project.toml
@@ -2,6 +2,7 @@
 CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 CounterfactualExplanations = "2f13d31b-18db-44c1-bc43-ebaf2cff0be0"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+LaplaceRedux = "c52c1a26-f7c5-402b-80be-ba1e638ad478"
 PackageExtensionCompat = "65ce6f38-6b18-4e1d-a461-8949797d7930"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
