--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,6 @@ authors = ["Patrick Altmeyer"]
 version = "1.0.0"
 
 [deps]
-CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
-CounterfactualExplanations = "2f13d31b-18db-44c1-bc43-ebaf2cff0be0"
-Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 PackageExtensionCompat = "65ce6f38-6b18-4e1d-a461-8949797d7930"
 
 [weakdeps]
@@ -18,8 +15,16 @@ PyTorchModelExt = "PythonCall"
 RTorchModelExt = "RCall"
 
 [compat]
-CondaPkg = "0.2"
-CounterfactualExplanations = "0.1, 1"
-Flux = "0.12, 0.13, 0.14"
-julia = "1.7, 1.8, 1.9"
+Aqua = "0.8"
 PackageExtensionCompat = "1"
+PythonCall = "0.9.19"
+RCall = "0.14.1"
+Test = "1.7, 1.8, 1.9, 1.10"
+julia = "1.7, 1.8, 1.9, 1.10"
+
+[extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Aqua", "Test"]
