--- a/Project.toml
+++ b/Project.toml
@@ -7,15 +7,19 @@ version = "1.0.1"
 PackageExtensionCompat = "65ce6f38-6b18-4e1d-a461-8949797d7930"
 
 [weakdeps]
+CounterfactualExplanations = "2f13d31b-18db-44c1-bc43-ebaf2cff0be0"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 
 [extensions]
-PyTorchModelExt = "PythonCall"
-RTorchModelExt = "RCall"
+PyTorchModelExt = ["PythonCall", "CounterfactualExplanations", "Flux"]
+RTorchModelExt = ["RCall", "CounterfactualExplanations", "Flux"]
 
 [compat]
 Aqua = "0.8"
+CounterfactualExplanations = "0.1.35, 1"
+Flux = "0.14.15"
 PackageExtensionCompat = "1"
 PythonCall = "0.9.19"
 RCall = "0.14.1"
